feat: add authorized_keys template for conditional Bitwarden master SSH key deployment to specific roles.

--- a/private_dot_ssh/authorized_keys.tmpl
+++ b/private_dot_ssh/authorized_keys.tmpl
@@ -2,9 +2,13 @@
 {{- if or (eq .role "workstation") (eq .role "mobilelab") (eq .role "server") -}}
 {{-   if (env "BW_SESSION") -}}
 {{-     $masterKey := (bitwarden "item" "ssh-key-master-ed25519") -}}
-{{-     if and $masterKey (hasKey $masterKey.fields "public_key") -}}
+{{-     if $masterKey -}}
+{{-       range $masterKey.fields -}}
+{{-         if eq .name "public_key" -}}
 # Master Key (Commander/Access from Laptop)
-{{ $masterKey.fields.public_key.value }}
+{{ .value }}
+{{-         end -}}
+{{-       end -}}
 {{-     end -}}
 {{-   end -}}
 {{- end -}}
