--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -68,7 +68,7 @@ if [ ! -S "$SSH_AUTH_SOCK" ]; then
     eval "$(ssh-agent -s -a "$SSH_AUTH_SOCK")" > /dev/null
 fi
 
-{{- $keyFile := "id_ed25519_dotfiles_master" -}}
+{{ $keyFile := "id_ed25519_dotfiles_master" -}}
 {{- if or (eq .role "server") (eq .role "mobilelab") -}}
 {{-   $keyFile = "id_ed25519_dotfiles_server" -}}
 {{- end -}}
