--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -27,16 +27,21 @@
 
 {{- /* Hostname Selection based on Role Pool */ -}}
 {{- $hostname_selection := "custom" -}}
-{{- $packages := include "packages.yaml" | fromYaml -}}
-{{- if hasKey $packages.name_pools $role -}}
-{{-   $pool := index $packages.name_pools $role -}}
-{{-   $choices := append $pool "custom" -}}
-{{-   $msg := list "Choose a Hostname for" $role | join " " -}}
-{{-   $hostname_selection = promptChoice $msg $choices "custom" -}}
-{{- end -}}
 
-{{- if eq $hostname_selection "custom" -}}
-{{-   $hostname_selection = promptString "Enter Custom Hostname" -}}
+{{- if hasKey . "hostname" -}}
+{{-   $hostname_selection = .hostname -}}
+{{- else -}}
+{{-   $packages := include "packages.yaml" | fromYaml -}}
+{{-   if hasKey $packages.name_pools $role -}}
+{{-     $pool := index $packages.name_pools $role -}}
+{{-     $choices := append $pool "custom" -}}
+{{-     $msg := list "Choose a Hostname for" $role | join " " -}}
+{{-     $hostname_selection = promptChoice $msg $choices "custom" -}}
+{{-   end -}}
+
+{{-   if eq $hostname_selection "custom" -}}
+{{-     $hostname_selection = promptString "Enter Custom Hostname" -}}
+{{-   end -}}
 {{- end -}}
 {{- if eq .chezmoi.os "windows" -}}
 sourceDir: {{ .chezmoi.sourceDir | quote }}
